--- a/home.html
+++ b/home.html
@@ -24,11 +24,11 @@
         </ul>
     </div>
     <main>
-    <div class="dashbtn">
-        <h2 class="dashb">Dashboard</h2>
+    <div class="dash-div">
+        <h2 class="dash-heading">Dashboard</h2>
         <button id="add-contact">+  Add Contact</button>
     </div>
-    <div class="users"></div>
+    <div class="users"></div> 
     </main>
     </div>
     
