--- a/contacts.html
+++ b/contacts.html
@@ -74,7 +74,7 @@
                 <p class="date">November 10, 2022 at 4pm</p>
                 <h4>Add a note about Michael</h4>
                 <textarea id="text" name="text">Enter details here...</textarea>
-                <button id="save">Save</button>
+                <button id="add-note">Add Note</button>
             </div>
         </main> 
     </div>
