--- a/login.html
+++ b/login.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF4-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" type="text/css" rel="stylesheet" />
 	<script src="schema.js" type="text/javascript"></script>
-    <title>Dolphin CRM</title>
+    <title>Dolphin CRM - Login</title>
 </head>
 <body>
     <header>
-        <img src="dolphin.png" alt="picture of dolphin"/>
-        <h3>Dolphin CRM</h1>
+        <img src="dolphin.png" alt="picture of dolphin"/> 
+        <h3>Dolphin CRM</h3>
     </header>
     <div class="access"> 
-        <h2>Login</h2>
-        <input id="email" type="email" name="email" placeholder="Enter address" />
-        <input id="password" type="password" name="password" placeholder="Password" />
-        <a href="home.html">
-            <button id="login">Login</button>
-        </a>
+        <form action="login.php" method="post">
+            <h2>Login</h2>
+            <input id="email" type="email" name="email" placeholder="Enter address" />
+            <input id="password" type="password" name="password" placeholder="Password" />
+            <a href="home.php">
+                <button id="login" type="submit" name="login">Login</button>
+            </a>
+        </form>
     </div>
     <footer>
         <p>Copyright &copy; 2022 Dolphin CRM</p>
