updated project files

--- a/new_contact.html
+++ b/new_contact.html
@@ -30,10 +30,10 @@
                     <div id="contact-info">
                     <label for="title">Title</label>
                     <select name="title" id="title">
-                        <option value="mr">Mr</option>
-                        <option value="mrs">Mrs</option>
-                        <option value="ms">Ms</option>
-                        <option value="none">None</option>
+                        <option value="Mr">Mr</option>
+                        <option value="Mrs">Mrs</option>
+                        <option value="Ms">Ms</option>
+                        <option value="None">None</option>
                     </select> 
                     </div>
 
@@ -65,15 +65,18 @@
                     <div id="contact-info">
                     <label for="type">Type</label>
                     <select name="type" id="type">
-                        <option value="sl">Sales Lead</option>
-                        <option value="sup">Support</option>
+                        <option value="Sales Lead">Sales Lead</option>
+                        <option value="Support">Support</option>
                     </select> 
                     </div>
                 
                     <div id="contact-info">
                     <label for="assigned">Assigned To</label>
                     <select name="assigned" id="assigned">
-                        <option value="name">Andy Bernard</option>
+                        <option value="rand()">Andy Bernard</option>
+                        <option value="rand()">Jen Levinson</option>
+                        <option value="rand()">Michael Scott</option>
+                        <option value="rand()">David Wallace</option>
                     </select> 
                     </div>
                     <button id="save" type="submit">Save</button>
